--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -228,9 +228,9 @@
 
   <!-- Kenttä: Organisaation tekijät -->
   <div class="row form-group"
-       id="organisaatiotekijaGroup"
+
        data-ng-if="isFieldVisible('organisaatiotekija')">
-    <div class="col-sm-4 col-xs-12">
+    <div class="col-sm-4 col-xs-12" id="organisaatiotekijaGroup">
       <label class="control-label" data-ng-bind="i18n.content.form.organisaatiotekija[lang]"></label>
       <i class="fa fa-info-circle justus-info"
         data-popover-trigger="'mouseenter'" data-popover-placement="right"
@@ -245,13 +245,18 @@
            data-ng-model="req_organisaatiotekija[$index]">
         <div class="col-xs-10">
           <div class="row form-group" id="organisaatiotekijaRow">
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-6 sukunimiGroup"
+                 validate-organisaatiotekijat-directive validate="validateState"
+                 field="sukunimi"
+                 value="justus.organisaatiotekija[$index].sukunimi">
               <input type="text" class="form-control"
                      data-ng-model="justus.organisaatiotekija[$index].sukunimi"
                      placeholder="{{i18n.content.form.organisaatiotekija.sukunimi.picktip[lang]}}">
               <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
             </div>
-            <div class="col-xs-12 col-sm-6">
+            <div class="col-xs-12 col-sm-6 etunimetGroup"
+                 validate-organisaatiotekijat-directive validate="validateState" field="etunimet"
+                 value="justus.organisaatiotekija[$index].etunimet">
               <input type="text" class="form-control"
                      data-ng-model="justus.organisaatiotekija[$index].etunimet"
                      placeholder="{{i18n.content.form.organisaatiotekija.etunimet.picktip[lang]}}">
@@ -260,7 +265,9 @@
           </div>
          
           <div class="row form-group">
-              <div data-ng-if="isFieldVisible('alayksikko')"  class="col-xs-12 col-sm-6 form-group" id="orcidGroup">
+              <div data-ng-if="isFieldVisible('alayksikko')"  class="col-xs-12 col-sm-6 form-group"
+                   validate-organisaatiotekijat-directive validate="validateState" field="orcid"
+                   value="justus.organisaatiotekija[$index].orcid">
                   <input type="text" class="form-control"
                          data-ng-model="justus.organisaatiotekija[$index].orcid"
                          placeholder="{{i18n.content.form.organisaatiotekija.orcid.picktip[lang]}}">
@@ -290,14 +297,16 @@
                   </ui-select>
               </div>
 
-          <div data-ng-if="isFieldVisible('alayksikko')" class="col-xs-12" id="alayksikkoGroup">
-
+          <div data-ng-if="isFieldVisible('alayksikko')" class="col-xs-12">
             <div data-ng-repeat="ota in justus.organisaatiotekija[$index].alayksikko track by $index"
                  data-ng-init="pIx=$parent.$index" class="row">
-              <div class="col-xs-9 col-sm-9">
+              <div class="col-xs-11 col-sm-11 mb-x"
+                   validate-organisaatiotekijat-directive validate="validateState"
+                   field="alayksikko" value="ota">
                 <ui-select data-ng-model="alayksikko.selected"
                            on-select="useOrganisaatiotekijaAlayksikko(pIx,$index,$select.selected.arvo)"
-                           theme="bootstrap">
+                           theme="bootstrap"
+                            class="dropdown-height-300">
                   <ui-select-match class="ui-select-match"
                                    placeholder="{{ota}} {{ getSelite(user.alayksikot, ota)|| i18n.content.form.organisaatiotekija.alayksikko.picktip[lang]}}">
                     {{ $select.selected.arvo }} {{ $select.selected.selite }}
@@ -309,8 +318,8 @@
               </div>
               <div>
 
-              <div class="col-xs-3 col-sm-3">
-                <span class="btn btn-primary"
+              <div class="col-xs-1 col-sm-1 pl-0">
+                <span class="btn btn-primary" data-ng-class="{'mb-x': $last}"
                       data-ng-click="justus.organisaatiotekija[$parent.$index].alayksikko.splice($index, 1)"
                       data-ng-hide="justus.organisaatiotekija[$parent.$index].alayksikko.length<2"
                       title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
@@ -337,7 +346,8 @@
           </span>
           <span class="btn btn-primary"
                 data-ng-click="addOrganisaatiotekija()"
-                data-ng-hide="$index < justus.organisaatiotekija.alayksikko.length-1"
+                data-ng-hide="$index < justus.organisaatiotekija.length-1"
+
                 title="{{i18n.content.form.organisaatiotekija.lisaa.tooltip[lang]}}"
                 data-ng-bind="i18n.content.form.organisaatiotekija.lisaa.tooltip[lang]">
           </span>
