--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -309,7 +309,7 @@
                             class="dropdown-height-300">
                   <ui-select-match class="ui-select-match"
                                    placeholder="{{ota}} {{ getSelite(user.alayksikot, ota)|| i18n.content.form.organisaatiotekija.alayksikko.picktip[lang]}}">
-                    {{ $select.selected.arvo }} {{ $select.selected.selite }}
+                    {{ ota }}  {{ getSelite(user.alayksikot, ota) }}
                   </ui-select-match>
                   <ui-select-choices repeat="o in getAlayksikkoData(alayksikkovuosi.selected) | filter: $select.search">
                     {{o.arvo}} {{o.selite}}
@@ -320,7 +320,7 @@
 
               <div class="col-xs-1 col-sm-1 pl-0">
                 <span class="btn btn-primary" data-ng-class="{'mb-x': $last}"
-                      data-ng-click="justus.organisaatiotekija[$parent.$index].alayksikko.splice($index, 1)"
+                      data-ng-click="addAlayksikko($parent.$index, $index)"
                       data-ng-hide="justus.organisaatiotekija[$parent.$index].alayksikko.length<2"
                       title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
                       data-ng-bind="i18n.content.form.organisaatiotekija.poista[lang]">
