Change emojulkaisuntoimittajat field to tag input.

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -547,9 +547,16 @@
     <div class="col-sm-8 col-xs-12 justus-data">
       <div class="row">
         <div class="col-xs-10">
-          <input type="text"
-                 class="form-control"
-                 data-ng-model="justus.julkaisu.emojulkaisuntoimittajat">
+         <tags-input data-ng-model="emojulkaisuntoimittajatTags"
+                           data-replace-spaces-with-dashes="false"
+                           data-add-on-comma="false"
+                           data-add-on-space="false"
+                           placeholder="{{i18n.content.form.tekijat.picktip[lang]}}"
+                           data-on-tag-added="useEmojulkaisuntoimittajat()"
+                           data-on-tag-removed="useEmojulkaisuntoimittajat()"
+                           enable-editing-last-tag="true"
+                           allowed-tags-pattern="^[^,\;]+,[^,\;]+$">
+         </tags-input>
           <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
         </div>
         <div class="col-xs-2">
