--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -200,7 +200,7 @@
   </div>
 
 
-  <!-- Kenttä alayksikön vuosivalinta, hide from members, set default as 2017-->
+  <!-- Kenttä alayksikön vuosivalinta, hide from members, set default as 2020-->
   <div data-ng-if="isFieldVisible('alayksikko')"
        data-ng-show="user.role !== 'member'" class="row form-group">
        <div class="col-xs-12 col-sm-4">
@@ -227,15 +227,151 @@
   </div>
 
   <!-- Kenttä: Organisaation tekijät -->
-  <div class="row form-group"
+  <!--<div class="row form-group"-->
+       <!--data-ng-if="isFieldVisible('organisaatiotekija')">-->
+    <!--<div class="col-sm-4 col-xs-12" id="organisaatiotekijaGroup">-->
+      <!--<label class="control-label" data-ng-bind="i18n.content.form.organisaatiotekija[lang]"></label>-->
+      <!--<i class="fa fa-info-circle justus-info"-->
+        <!--data-popover-trigger="'mouseenter'" data-popover-placement="right"-->
+        <!--data-uib-popover="{{julkaisutyyppi_paa == 'F' ? i18n.content.form.organisaatiotekija.tooltipF[lang] : i18n.content.form.organisaatiotekija.tooltip[lang]}}"-->
+        <!--data-ng-show="i18n.content.form.organisaatiotekija.tooltip[lang]">-->
+      <!--</i>-->
+      <!--<span data-ng-if="isFieldRequired('organisaatiotekija')" class="required-star">*</span>-->
+    <!--</div>-->
+    <!--<div class="col-sm-8 col-xs-12 justus-data">-->
+      <!--<div data-ng-repeat="i in justus.organisaatiotekija track by $index"-->
+           <!--class="row"-->
+           <!--data-ng-model="req_organisaatiotekija[$index]">-->
+        <!--<div class="col-xs-10">-->
+          <!--<div class="row form-group" id="organisaatiotekijaRow">-->
+            <!--<div class="col-xs-12 col-sm-6 sukunimiGroup"-->
+                 <!--validate-organisaatiotekijat-directive validate="validateState"-->
+                 <!--field="sukunimi"-->
+                 <!--value="justus.organisaatiotekija[$index].sukunimi">-->
+              <!--<input type="text" class="form-control"-->
+                     <!--data-ng-model="justus.organisaatiotekija[$index].sukunimi"-->
+                     <!--placeholder="{{i18n.content.form.organisaatiotekija.sukunimi.picktip[lang]}}">-->
+              <!--<span class="fa fa-times form-control-feedback" aria-hidden="true"></span>-->
+            <!--</div>-->
+            <!--<div class="col-xs-12 col-sm-6 etunimetGroup"-->
+                 <!--validate-organisaatiotekijat-directive validate="validateState" field="etunimet"-->
+                 <!--value="justus.organisaatiotekija[$index].etunimet">-->
+              <!--<input type="text" class="form-control"-->
+                     <!--data-ng-model="justus.organisaatiotekija[$index].etunimet"-->
+                     <!--placeholder="{{i18n.content.form.organisaatiotekija.etunimet.picktip[lang]}}">-->
+              <!--<span class="fa fa-times form-control-feedback" aria-hidden="true"></span>-->
+            <!--</div>-->
+          <!--</div>-->
+         <!---->
+          <!--<div class="row form-group">-->
+              <!--<div data-ng-if="isFieldVisible('alayksikko')"  class="col-xs-12 col-sm-6 form-group"-->
+                   <!--validate-organisaatiotekijat-directive validate="validateState" field="orcid"-->
+                   <!--value="justus.organisaatiotekija[$index].orcid">-->
+                  <!--<input type="text" class="form-control"-->
+                         <!--data-ng-model="justus.organisaatiotekija[$index].orcid"-->
+                         <!--placeholder="{{i18n.content.form.organisaatiotekija.orcid.picktip[lang]}}">-->
+                  <!--<span class="fa fa-times form-control-feedback" aria-hidden="true"></span>-->
+              <!--</div>-->
+            <!--&lt;!&ndash; Kenttä hr numero, currently visible only for Luonnonvarakeskus &ndash;&gt;-->
+            <!--<div data-ng-if="isFieldVisible('hrnumero')" id="hrGroup" class="col-xs-12 col-sm-6 form-group">-->
+              <!--<input type="text" class="form-control"-->
+              <!--data-ng-model="justus.organisaatiotekija[$index].hrnumero"-->
+              <!--placeholder="{{i18n.content.form.organisaatiotekija.hrnumero.picktip[lang]}}">-->
+              <!--<span class="fa fa-times form-control-feedback" aria-hidden="true"></span>-->
+            <!--</div>-->
+             <!--&lt;!&ndash; Kenttä: Tekijän rooli taidejulkaisuille &ndash;&gt;-->
+            <!--<div data-ng-if="isFieldVisible('tekijanrooli')" id="rooliGroup" class="col-xs-12 col-sm-6 form-group">-->
+              <!--<span class="fa fa-times form-control-feedback" aria-hidden="true"></span>-->
+                 <!--<ui-select data-ng-model="rooli.selected"-->
+                            <!--on-select="useOrganisaatiotekijaRooli($index,$select.selected)"-->
+                            <!--theme="bootstrap">-->
+                    <!--<ui-select-match class="ui-select-match"-->
+                                     <!--data-ng-value="justus.organisaatiotekija[$index].rooli"-->
+                                     <!--placeholder="{{justus.organisaatiotekija[$index].rooli}} {{getSelite(codes.julkaisuntekijanrooli ,justus.organisaatiotekija[$index].rooli) || i18n.content.form.organisaatiotekija.tekijanrooli.picktip[lang]}}">-->
+                      <!--{{ $select.selected.arvo }} {{ $select.selected.selite }}-->
+                    <!--</ui-select-match>-->
+                    <!--<ui-select-choices repeat="role in codes.julkaisuntekijanrooli | orderBy: 'arvo' | filter: $select.search">-->
+                      <!--{{role.arvo}} {{role.selite }}-->
+                    <!--</ui-select-choices>-->
+                  <!--</ui-select>-->
+              <!--</div>-->
 
-       data-ng-if="isFieldVisible('organisaatiotekija')">
+          <!--<div data-ng-if="isFieldVisible('alayksikko')" class="col-xs-12">-->
+            <!--<div data-ng-repeat="ota in justus.organisaatiotekija[$index].alayksikko track by $index"-->
+                 <!--data-ng-init="pIx=$parent.$index" class="row">-->
+              <!--<div class="col-xs-11 col-sm-11 mb-x"-->
+                   <!--validate-organisaatiotekijat-directive validate="validateState"-->
+                   <!--field="alayksikko" value="ota">-->
+                <!--<ui-select data-ng-model="alayksikko.selected"-->
+                           <!--on-select="useOrganisaatiotekijaAlayksikko(pIx,$index,$select.selected.arvo)"-->
+                           <!--theme="bootstrap"-->
+                            <!--class="dropdown-height-300">-->
+                    <!--<ui-select-match class="ui-select-match"-->
+                                     <!--placeholder="{{ ota }} {{ getSelite(user.alayksikot, ota)|| i18n.content.form.organisaatiotekija.alayksikko.picktip[lang]}}">-->
+                    <!--{{ ota }}  {{ getSelite(user.alayksikot, ota) }}-->
+                  <!--</ui-select-match>-->
+                  <!--<ui-select-choices repeat="o in getAlayksikkoData(alayksikkovuosi.selected) | filter: $select.search">-->
+                    <!--{{ getArvo(o.arvo)}} {{o.selite}}-->
+                  <!--</ui-select-choices>-->
+                <!--</ui-select>-->
+              <!--</div>-->
+              <!--<div>-->
+
+              <!--<div class="col-xs-1 col-sm-1 pl-0">-->
+                <!--<span class="btn btn-primary" data-ng-class="{'mb-x': $last}"-->
+                      <!--data-ng-click="addAlayksikko($parent.$index, $index)"-->
+                      <!--data-ng-hide="justus.organisaatiotekija[$parent.$index].alayksikko.length<2"-->
+                      <!--title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"-->
+                      <!--data-ng-bind="i18n.content.form.organisaatiotekija.poista[lang]">-->
+                <!--</span>-->
+                <!--<span class="btn btn-primary"-->
+                      <!--data-ng-click="justus.organisaatiotekija[$parent.$index].alayksikko.push('')"-->
+                      <!--data-ng-show="($index == justus.organisaatiotekija[$parent.$index].alayksikko.length-1 && a!='')"-->
+                      <!--title="{{i18n.content.form.organisaatiotekija.lisaa.tooltip[lang]}}"-->
+                      <!--data-ng-bind="i18n.content.form.organisaatiotekija.lisaa[lang]">-->
+                <!--</span>-->
+              <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-xs-2">-->
+          <!--<span class="btn btn-primary mb-x"-->
+                <!--data-ng-click="justus.organisaatiotekija.splice($index, 1)"-->
+                <!--data-ng-hide="justus.organisaatiotekija.length<2"-->
+                <!--title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"-->
+                <!--data-ng-bind="i18n.content.form.organisaatiotekija.poista.tooltip[lang]">-->
+          <!--</span>-->
+          <!--<span class="btn btn-primary"-->
+                <!--data-ng-click="addOrganisaatiotekija()"-->
+                <!--data-ng-hide="$index < justus.organisaatiotekija.length-1"-->
+
+                <!--title="{{i18n.content.form.organisaatiotekija.lisaa.tooltip[lang]}}"-->
+                <!--data-ng-bind="i18n.content.form.organisaatiotekija.lisaa.tooltip[lang]">-->
+          <!--</span>-->
+
+          <!--<i class="fa fa-arrow-left pull-right form-control-feedback-extra"-->
+             <!--data-ng-if="requiredHighlight && !(justus.organisaatiotekija[$index].sukunimi && justus.organisaatiotekija[$index].etunimet-->
+            <!--&& justus.organisaatiotekija[$index].alayksikko[0].alayksikko-->
+            <!--)">&lt;!&ndash; nb! ei pakollinen vielä && justus.organisaatiotekija[$index].orcid)" &ndash;&gt;-->
+          <!--</i>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+
+  <!--<button data-ng-click="resetOrg()">Tyhjennä</button>-->
+
+  <!-- Organisaation tekijat esitaytto -->
+    <div class="row form-group"
+         data-ng-if="isFieldVisible('organisaatiotekija')">
     <div class="col-sm-4 col-xs-12" id="organisaatiotekijaGroup">
       <label class="control-label" data-ng-bind="i18n.content.form.organisaatiotekija[lang]"></label>
       <i class="fa fa-info-circle justus-info"
-        data-popover-trigger="'mouseenter'" data-popover-placement="right"
-        data-uib-popover="{{julkaisutyyppi_paa == 'F' ? i18n.content.form.organisaatiotekija.tooltipF[lang] : i18n.content.form.organisaatiotekija.tooltip[lang]}}"
-        data-ng-show="i18n.content.form.organisaatiotekija.tooltip[lang]">
+         data-popover-trigger="'mouseenter'" data-popover-placement="right"
+         data-uib-popover="{{julkaisutyyppi_paa == 'F' ? i18n.content.form.organisaatiotekija.tooltipF[lang] : i18n.content.form.organisaatiotekija.tooltip[lang]}}"
+         data-ng-show="i18n.content.form.organisaatiotekija.tooltip[lang]">
       </i>
       <span data-ng-if="isFieldRequired('organisaatiotekija')" class="required-star">*</span>
     </div>
@@ -249,9 +385,17 @@
                  validate-organisaatiotekijat-directive validate="validateState"
                  field="sukunimi"
                  value="justus.organisaatiotekija[$index].sukunimi">
-              <input type="text" class="form-control"
-                     data-ng-model="justus.organisaatiotekija[$index].sukunimi"
-                     placeholder="{{i18n.content.form.organisaatiotekija.sukunimi.picktip[lang]}}">
+                  <ui-select data-ng-model="organisaatioTekijaSelected"
+                             on-select="useOrganisaatiotekija($select.selected, 'sukunimi', $index)"
+                             theme="bootstrap">
+                    <ui-select-match class="ui-select-match"
+                                     placeholder="{{ i18n.content.form.organisaatiotekija.sukunimi.picktip[lang]}}">
+                      {{ i.sukunimi }}
+                    </ui-select-match>
+                    <ui-select-choices repeat="person in persons | orderBy: 'sukunimi' | filter: { sukunimi: $select.search }">
+                      <span class="font-weight-bold">{{person.sukunimi}}</span> {{person.etunimi}}
+                    </ui-select-choices>
+                  </ui-select>
               <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
             </div>
             <div class="col-xs-12 col-sm-6 etunimetGroup"
@@ -263,24 +407,26 @@
               <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
             </div>
           </div>
-         
+
           <div class="row form-group">
               <div data-ng-if="isFieldVisible('alayksikko')"  class="col-xs-12 col-sm-6 form-group"
                    validate-organisaatiotekijat-directive validate="validateState" field="orcid"
                    value="justus.organisaatiotekija[$index].orcid">
                   <input type="text" class="form-control"
+                         data-ng-keyup="useOrcidEsitaytto(justus.organisaatiotekija[$index].orcid, $index)"
                          data-ng-model="justus.organisaatiotekija[$index].orcid"
                          placeholder="{{i18n.content.form.organisaatiotekija.orcid.picktip[lang]}}">
                   <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
+                <span data-ng-show="orcidError">No data found for this orcid</span>
               </div>
             <!-- Kenttä hr numero, currently visible only for Luonnonvarakeskus -->
             <div data-ng-if="isFieldVisible('hrnumero')" id="hrGroup" class="col-xs-12 col-sm-6 form-group">
               <input type="text" class="form-control"
-              data-ng-model="justus.organisaatiotekija[$index].hrnumero"
-              placeholder="{{i18n.content.form.organisaatiotekija.hrnumero.picktip[lang]}}">
+                     data-ng-model="justus.organisaatiotekija[$index].hrnumero"
+                     placeholder="{{i18n.content.form.organisaatiotekija.hrnumero.picktip[lang]}}">
               <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
             </div>
-             <!-- Kenttä: Tekijän rooli taidejulkaisuille -->
+            <!-- Kenttä: Tekijän rooli taidejulkaisuille -->
             <div data-ng-if="isFieldVisible('tekijanrooli')" id="rooliGroup" class="col-xs-12 col-sm-6 form-group">
               <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
                  <ui-select data-ng-model="rooli.selected"
@@ -304,15 +450,15 @@
                    validate-organisaatiotekijat-directive validate="validateState"
                    field="alayksikko" value="ota">
                 <ui-select data-ng-model="alayksikko.selected"
-                           on-select="useOrganisaatiotekijaAlayksikko(pIx,$index,$select.selected.arvo)"
+                           on-select="useOrganisaatiotekijaAlayksikko(pIx,$index,$select.selected)"
                            theme="bootstrap"
-                            class="dropdown-height-300">
+                           class="dropdown-height-300">
                     <ui-select-match class="ui-select-match"
                                      placeholder="{{ ota }} {{ getSelite(user.alayksikot, ota)|| i18n.content.form.organisaatiotekija.alayksikko.picktip[lang]}}">
                     {{ ota }}  {{ getSelite(user.alayksikot, ota) }}
                   </ui-select-match>
-                  <ui-select-choices repeat="o in getAlayksikkoData(alayksikkovuosi.selected) | filter: $select.search">
-                    {{ getArvo(o.arvo)}} {{o.selite}}
+                  <ui-select-choices repeat="a in tempAlayksikot | filter: $select.search">
+                     {{a}} {{ getSelite(user.alayksikot, a) }}
                   </ui-select-choices>
                 </ui-select>
               </div>
@@ -361,6 +507,8 @@
       </div>
     </div>
   </div>
+
+
 
    <!-- Kenttä: Projektinumero -->
    <div class="row form-group"
