--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -201,30 +201,30 @@
 
 
   <!-- Kenttä alayksikön vuosivalinta, hide from members, set default as 2020-->
-  <div data-ng-if="isFieldVisible('alayksikko')"
-       data-ng-show="user.role !== 'member'" class="row form-group">
-       <div class="col-xs-12 col-sm-4">
-        <label data-ng-bind="i18n.content.form.organisaatiotekija.alayksikkovuosi[lang]">
-        </label>
-          <i class="fa fa-info-circle justus-info"
-             data-popover-trigger="'mouseenter'" data-popover-placement="right"
-             data-uib-popover="{{i18n.content.form.organisaatiotekija.alayksikkovuosi.tooltip[lang]}}">
-         </i>
-      </div>
-      <div class="col-xs-12 col-sm-5">
-        <ui-select data-ng-model="alayksikkovuosi.selected"
-                   theme="bootstrap">
-            <ui-select-match class="ui-select-match"
-                             data-ng-value="alayksikkovuosi.selected"
-                             placeholder="{{i18n.content.form.organisaatiotekija.alayksikkovuosi.picktip[lang]}}">
-              {{ $select.selected.label }}
-            </ui-select-match>
-            <ui-select-choices repeat="ala in alayksikkovuodet">
-              {{ala.label}}
-            </ui-select-choices>
-      </ui-select>
-    </div>
-  </div>
+  <!--<div data-ng-if="isFieldVisible('alayksikko')"-->
+       <!--data-ng-show="user.role !== 'member'" class="row form-group">-->
+       <!--<div class="col-xs-12 col-sm-4">-->
+        <!--<label data-ng-bind="i18n.content.form.organisaatiotekija.alayksikkovuosi[lang]">-->
+        <!--</label>-->
+          <!--<i class="fa fa-info-circle justus-info"-->
+             <!--data-popover-trigger="'mouseenter'" data-popover-placement="right"-->
+             <!--data-uib-popover="{{i18n.content.form.organisaatiotekija.alayksikkovuosi.tooltip[lang]}}">-->
+         <!--</i>-->
+      <!--</div>-->
+      <!--<div class="col-xs-12 col-sm-5">-->
+        <!--<ui-select data-ng-model="alayksikkovuosi.selected"-->
+                   <!--theme="bootstrap">-->
+            <!--<ui-select-match class="ui-select-match"-->
+                             <!--data-ng-value="alayksikkovuosi.selected"-->
+                             <!--placeholder="{{i18n.content.form.organisaatiotekija.alayksikkovuosi.picktip[lang]}}">-->
+              <!--{{ $select.selected.label }}-->
+            <!--</ui-select-match>-->
+            <!--<ui-select-choices repeat="ala in alayksikkovuodet">-->
+              <!--{{ala.label}}-->
+            <!--</ui-select-choices>-->
+      <!--</ui-select>-->
+    <!--</div>-->
+  <!--</div>-->
 
   <!-- Kenttä: Organisaation tekijät -->
   <!--<div class="row form-group"-->
@@ -262,7 +262,7 @@
               <!--<span class="fa fa-times form-control-feedback" aria-hidden="true"></span>-->
             <!--</div>-->
           <!--</div>-->
-         <!---->
+
           <!--<div class="row form-group">-->
               <!--<div data-ng-if="isFieldVisible('alayksikko')"  class="col-xs-12 col-sm-6 form-group"-->
                    <!--validate-organisaatiotekijat-directive validate="validateState" field="orcid"-->
@@ -361,7 +361,6 @@
     <!--</div>-->
   <!--</div>-->
 
-  <!--<button data-ng-click="resetOrg()">Tyhjennä</button>-->
 
   <!-- Organisaation tekijat esitaytto -->
     <div class="row form-group"
@@ -402,6 +401,7 @@
                  validate-organisaatiotekijat-directive validate="validateState" field="etunimet"
                  value="justus.organisaatiotekija[$index].etunimet">
               <input type="text" class="form-control"
+                     data-ng-disabled="organisaatiotekijaDisabled"
                      data-ng-model="justus.organisaatiotekija[$index].etunimet"
                      placeholder="{{i18n.content.form.organisaatiotekija.etunimet.picktip[lang]}}">
               <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
@@ -414,6 +414,7 @@
                    value="justus.organisaatiotekija[$index].orcid">
                   <input type="text" class="form-control"
                          data-ng-keyup="useOrcidEsitaytto(justus.organisaatiotekija[$index].orcid, $index)"
+                         data-ng-disabled="organisaatiotekijaDisabled"
                          data-ng-model="justus.organisaatiotekija[$index].orcid"
                          placeholder="{{i18n.content.form.organisaatiotekija.orcid.picktip[lang]}}">
                   <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
@@ -449,18 +450,26 @@
               <div class="col-xs-11 col-sm-11 mb-x"
                    validate-organisaatiotekijat-directive validate="validateState"
                    field="alayksikko" value="ota">
-                <ui-select data-ng-model="alayksikko.selected"
-                           on-select="useOrganisaatiotekijaAlayksikko(pIx,$index,$select.selected)"
-                           theme="bootstrap"
-                           class="dropdown-height-300">
-                    <ui-select-match class="ui-select-match"
-                                     placeholder="{{ ota }} {{ getSelite(user.alayksikot, ota)|| i18n.content.form.organisaatiotekija.alayksikko.picktip[lang]}}">
-                    {{ ota }}  {{ getSelite(user.alayksikot, ota) }}
-                  </ui-select-match>
-                  <ui-select-choices repeat="a in tempAlayksikot | filter: $select.search">
-                     {{a}} {{ getSelite(user.alayksikot, a) }}
-                  </ui-select-choices>
-                </ui-select>
+                      <input
+                              type="text"
+                              class="form-control"
+                              data-ng-disabled="organisaatiotekijaDisabled"
+                              value="{{ota}}"
+                              placeholder="{{ i18n.content.form.organisaatiotekija.alayksikko.picktip[lang] }}">
+                      <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
+
+                <!--<ui-select data-ng-model="alayksikko.selected"-->
+                           <!--on-select="useOrganisaatiotekijaAlayksikko(pIx,$index,$select.selected.arvo)"-->
+                           <!--theme="bootstrap"-->
+                           <!--class="dropdown-height-300">-->
+                    <!--<ui-select-match class="ui-select-match"-->
+                                     <!--placeholder="{{ ota.arvo }} {{ getSelite(user.alayksikot, ota.arvo)|| i18n.content.form.organisaatiotekija.alayksikko.picktip[lang]}}">-->
+                    <!--{{ ota }}  {{ getSelite(user.alayksikot, ota) }}-->
+                  <!--</ui-select-match>-->
+                  <!--<ui-select-choices repeat="a in tempAlayksikot | filter: $select.search">-->
+                     <!--{{a}} {{ getSelite(user.alayksikot, a) }}-->
+                  <!--</ui-select-choices>-->
+                <!--</ui-select>-->
               </div>
               <div>
 
@@ -470,12 +479,6 @@
                       data-ng-hide="justus.organisaatiotekija[$parent.$index].alayksikko.length<2"
                       title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
                       data-ng-bind="i18n.content.form.organisaatiotekija.poista[lang]">
-                </span>
-                <span class="btn btn-primary"
-                      data-ng-click="justus.organisaatiotekija[$parent.$index].alayksikko.push('')"
-                      data-ng-show="($index == justus.organisaatiotekija[$parent.$index].alayksikko.length-1 && a!='')"
-                      title="{{i18n.content.form.organisaatiotekija.lisaa.tooltip[lang]}}"
-                      data-ng-bind="i18n.content.form.organisaatiotekija.lisaa[lang]">
                 </span>
               </div>
               </div>
