Inital version of admin view.

--- a/src/app/html/header.html
+++ b/src/app/html/header.html
@@ -51,6 +51,10 @@
         </span>
     </div>
 
+    <div>
+      <button href data-ui-sref="admin()" class="btn btn-link font-weight-bold">Käyttäjien hallinta</button>
+    </div>
+
     <span data-ng-if="initialRole === 'owner'">
       <select data-ng-model="selectedDemoUserRole">
         <option value="" disabled selected>Valite rooli</option>
