Add link for downloading CSV

--- a/src/app/html/admin.html
+++ b/src/app/html/admin.html
@@ -145,7 +145,7 @@
         </div>
 
         <div class="d-inline-block pull-right">
-            <button class="btn btn-primary" data-ng-click="downloadCSV()">Lataa</button>
+            <button class="btn btn-primary"><a data-ng-href="{{csvurl}}" download="persons.csv">Download</a></button>
         </div>
     </div>
 
