Small style fixes.

--- a/src/app/html/admin.html
+++ b/src/app/html/admin.html
@@ -145,7 +145,9 @@
         </div>
 
         <div class="d-inline-block pull-right">
-            <button class="btn btn-primary"><a data-ng-href="{{csvurl}}" download="persons.csv">Download</a></button>
+            <button class="btn btn-primary">
+                <a data-ng-href="{{csvurl}}" class="text-white no-hover" download="persons.csv">Lataa CSV</a>
+            </button>
         </div>
     </div>
 
