--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -59,6 +59,10 @@
   padding: $padding-small-vertical 0;
 }
 
+.p-l {
+  padding: $padding-large-horizontal;
+}
+
 .p-0 {
   padding: 0;
 }
@@ -67,10 +71,13 @@
   padding-left: 0;
 }
 
+.mt-0 {
+  margin-top: 0;
+}
+
 .ml-0 {
   margin-left: 0;
 }
-
 
 .nowrap {
   white-space: nowrap;
@@ -120,6 +127,9 @@
   background-color: $brand-primary;
 }
 
+.border-danger {
+  border: 1px solid $brand-danger;
+}
 
 .d-inline-block {
   display: inline-block;
