Minor UI and translation fixes.

--- a/src/app/html/tarkasta.html
+++ b/src/app/html/tarkasta.html
@@ -82,10 +82,9 @@
           </button>
         </div>
         <div class="d-inline-block">
-          <button class="btn btn-danger"
+          <button class="btn btn-default"
                   data-ng-click="resetData()"
-                  title="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.tyhjenna[lang]"
-                  data-ng-bind="i18n.content.rinnakkaistallennusform.rinnakkaistallennettava.form.tyhjenna[lang]">
+                  data-ng-bind="i18n.content.tarkasta.haku.tyhjenna[lang]">
           </button>
         </div>
       </div>
