Enable multiple organisational units when copying authors.

--- a/src/app/html/admin/haku.html
+++ b/src/app/html/admin/haku.html
@@ -26,7 +26,7 @@
             <div class="col-xs-12">
                 <label class="control-label">Sähköposti</label>
                 <input type="text" class="form-control person-input"
-                       value="email@email.fi">
+                       data-ng-model="selectedPerson.email">
             </div>
         </div>
         <div class="row form-group">
