Add directive for listing person's publications based on orcid.

--- a/src/app/html/admin/haku.html
+++ b/src/app/html/admin/haku.html
@@ -102,6 +102,15 @@
             </div>
         </div>
 
+    <div data-ng-if="showList" style="margin: 30px 15px;">
+        <span data-ng-click="closeList()" class="pull-right cursor-pointer justus-close-btn">
+            <i class="fa fa-close fa-lg"></i>
+        </span>
+        <person-publication-list-directive
+                                           person="personToShow"
+                                           publication-list="publicationList"
+                                          >
+        </person-publication-list-directive>
     </div>
 
 
