--- a/src/app/scss/components/_button.scss
+++ b/src/app/scss/components/_button.scss
@@ -1,6 +1,6 @@
 .btn-primary {
   &.btn-lg {
-    padding: $padding-large-vertical*2 $padding-large-horizontal;
+    //padding: $padding-large-vertical*2 $padding-large-horizontal;
   }
   &.btn-secondary,
   &:focus,
@@ -29,6 +29,13 @@
 .justus-btn:hover {
   transition: all 0.5s ease-in-out;
   background-color: #026D7C;
+}
+
+.justus-close-btn {
+  background: #F9F9F9;
+  padding: 4px 6px;
+  box-shadow: 0px 0px 4px 1px #B2B2B2;
+  -webkit-box-shadow: 0px 0px 4px 1px #B2B2B2;
 }
 
 .justus-btn.selected {
